--- a/index.html
+++ b/index.html
@@ -218,11 +218,13 @@ customElements.define('markdown-style', MarkdownStyle);</script><markdown-style 
       <li><code>version</code> Version must be parseable by node-semver, which is bundled with npm as a dependency.</li>
       <li><code>homepage</code> The url to the project homepage.</li>
       <li><code>author</code> author field in package.json</li>
+      <li><code>private</code> private field in package.json</li>
       <li><code>license</code> You should specify a license for your package so that people know how they are permitted to use it, and any restrictions you're placing on it.</li>
       <li><code>author</code> This helps people discover your package as it's listed in 'npm search'.</li>
       <li><code>keywords</code> This helps people discover your package as it's listed in 'npm search'.</li>
       <li><code>repository</code> Specify the place where your code lives. This is helpful for people who want to contribute.</li>
       <li><code>os</code> Specify which operating systems your module will run on.</li>
+      <li><code>cpu</code> cpu field in package.json</li>
     </ul>
     <h2 id="see-also"><a class="anchor" aria-hidden="true" tabindex="-1" href="#see-also"><span class="octicon octicon-link"></span></a>See Also</h2>
     <ul>
