--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
           <li><a href="https://github.com/jaywcjlove/github-action-contributors">Github Action Contributors</a> Github action generates dynamic image URL for contributor list to display it!</li>
           <li><a href="https://github.com/jaywcjlove/generated-badges">Generated Badges</a> Create a badge using GitHub Actions and GitHub Workflow CPU time (no 3rd parties servers)</li>
           <li><a href="https://github.com/jaywcjlove/coverage-badges-cli">Create Coverage Badges</a> Create coverage badges from coverage reports. (no 3rd parties servers)</li>
+          <li><a href="https://github.com/jaywcjlove/action-ejs">Action EJS</a> A github action to render a <a href="https://github.com/mde/ejs"><code>ejs</code></a> template using github context</li>
         </ul>
         <h2 id="contributors"><a aria-hidden="true" tabindex="-1" href="#contributors" class="anchor"><span class="icon icon-link"></span></a>Contributors</h2>
         <p>As always, thanks to our amazing contributors!</p><a href="https://github.com/jaywcjlove/github-action-package/graphs/contributors"><img src="https://jaywcjlove.github.io/github-action-package/CONTRIBUTORS.svg"></a>
